--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
         </div>
         <div class="row2">
-          <div class="image-content">
+          <div class="images">
             <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg"/>
             <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg"/>
             <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg"/>
@@ -57,7 +57,7 @@
           </div>
         </div>
         <div class="row4">
-          <div class="image-content">
+          <div class="images">
             <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg"/>
             <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg"/>
           </div>
