--- a/index.html
+++ b/index.html
@@ -36,39 +36,30 @@
       </div>
       <!--tea of the month section -->
       <div class="teaofthemonth">
-        <div class="row1">
-          <div class="title">
-            <h2>Tea of the Month</h2>
-            <h4>What's steeping at The Tea Cozy?</h4>
-          </div>
-        </div>
-        <div class="row2">
-          <div class="images">
+        <h2>Tea of the Month</h2>
+        <h4>What's steeping at The Tea Cozy?</h4>
+        <div class="tealist">
+          <div class="tea">
             <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg"/>
+            <span><h4> Fall Berry Blitz Tea </h4></span>
+          </div>
+          <div class="tea">
             <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg"/>
+            <span><h4>Spiced Rum Tea</h4></span>
+          </div>
+          <div class="tea">
             <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg"/>
+            <span><h4>Seasonal Donuts</h4></span>
           </div>
-        </div>
-        <div class="row3">
-          <div class="nameoftea">
-            <h4>Fall Berry Blitz Tea</h4>
-            <h4>Spiced Rum Tea</h4>
-            <h4>Seasonal Donuts</h4>
-          </div>
-        </div>
-        <div class="row4">
-          <div class="images">
+          <div class="tea">
             <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg"/>
+            <span><h4>Myrtle Ave Tea</h4></span>
+          </div>
+          <div class="tea">
             <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg"/>
+            <span><h4>Bedford Bizarre Tea</h4></span>
           </div>
         </div>
-        <div class="row5">
-          <div class="nameoftea">
-            <h4>Myrtle Ave Tea</h4>
-            <h4>Bedford Bizarre Tea</h4>
-          </div>
-        </div>
-      </div>
       <!--locations section-->
       <div class="locations">
         <div class="image-content">
