--- a/index.html
+++ b/index.html
@@ -25,15 +25,13 @@
     <div class="main-container">
 
       <!--mission statement section-->
-      <div class="mission-statement">
-        <div class="image-content">
-          <div class="title">
-            <h2>Our Mission</h2>
-            <h4>Handpicked, Artisanally Curated, Free Range, Small Batch, Fair Trade, Organic Tea</h4>
-          </div>
+      <div class="mission">
+        <div class="title">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
-
       </div>
+
       <!--tea of the month section -->
       <div class="teaofthemonth">
         <h2>Tea of the Month</h2>
@@ -62,20 +60,17 @@
         </div>
       <!--locations section-->
       <div class="locations">
-        <div class="image-content">
-          <div class="title">
-            <h2>Locations</h2>
-          </div>
-          <div class="addresses">
-            <div class="downtown">
+          <h2>Locations</h2>
+          <div class="info">
+            <div class="addresses">
               <h3>DownTown</h3>
               <p>384 West 4th St <br /> Suite 108 <br /> Portland, Maine</p>
             </div>
-            <div class="eastbayside">
+            <div class="addresses">
               <h3>East Bayside</h3>
               <p>3433 Phisherman's Avenue <br />(Northwest Corner) <br />Portland, Maine</p>
             </div>
-            <div class="oakdale">
+            <div class="addresses">
               <h3>Oakdale</h3>
               <p>515 Crescent Avenue <br /> Second Floor <br /> Portland, Maine</p>
             </div>
