--- a/index.html
+++ b/index.html
@@ -79,19 +79,15 @@
         </div>
       </div>
     </div>
+    <!-- contact info -->
+    <div class="contact-info">
+        <h2>The Tea Cozy </h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+    </div>
     <!--footer -->
     <footer>
-      <div class="contact-info">
-        <div class="title">
-          <h2>The Tea Cozy </h2>
-          <h5>contact@theteacozy.com</h5>
-          <h5>917-555-8904</h5>
-        </div>
-      </div>
-      <dic class="copyright">
-        <span>copyright The Tea Cozy 2017</span>
-      </div>
-
+        <h5>copyright The Tea Cozy 2017</h5>
     </footer>
 
   </body>
