--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <!--mission statement section-->
       <div class="mission">
-        <div class="title">
+        <div class="statement">
           <h2>Our Mission</h2>
           <h4>Handpicked, Artisanally Curated, Free Range, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
