more spacing bugs

--- a/index.html
+++ b/index.html
@@ -60,23 +60,28 @@
         </div>
       </div>
       <!--locations section-->
-      <div class="locations">
+      <div id="locations">
           <h2>Locations</h2>
           <div class="info">
             <div class="addresses">
               <h3>DownTown</h3>
-              <p>384 West 4th St <br /> Suite 108 <br /> Portland, Maine</p>
+              <p>384 West 4th St</p>
+              <p>Suite 108 </p>
+              <p>Portland, Maine</p>
             </div>
             <div class="addresses">
               <h3>East Bayside</h3>
-              <p>3433 Phisherman's Avenue <br />(Northwest Corner) <br />Portland, Maine</p>
+              <p>3433 Phisherman's Avenue
+              <p>(Northwest Corner) </p>
+              <p>Portland, Maine</p>
             </div>
             <div class="addresses">
               <h3>Oakdale</h3>
-              <p>515 Crescent Avenue <br /> Second Floor <br /> Portland, Maine</p>
+              <p>515 Crescent Avenue </p>
+              <p>Second Floor</p>
+              <p>Portland, Maine</p>
             </div>
           </div>
-
         </div>
     </div>
     <!-- contact info -->
