fixing in page links

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png"/>
       </div>
       <nav>
-        <span><a href="#mission-statement">Mission</a></span>
+        <span><a href="#mission">Mission</a></span>
         <span><a href="#teaofthemonth">Featured Tea</a></span>
-        <span><a href="#Locations">Locations</a></span>
+        <span><a href="#locations">Locations</a></span>
       </nav>
 
     </header>
@@ -25,7 +25,7 @@
     <div class="main-container">
 
       <!--mission statement section-->
-      <div class="mission">
+      <div id="mission">
         <div class="statement">
           <h2>Our Mission</h2>
           <h4>Handpicked, Artisanally Curated, Free Range, Small Batch, Fair Trade, Organic Tea</h4>
@@ -33,7 +33,7 @@
       </div>
 
       <!--tea of the month section -->
-      <div class="teaofthemonth">
+      <div id="teaofthemonth">
         <h2>Tea of the Month</h2>
         <h4>What's steeping at The Tea Cozy?</h4>
         <div class="tealist">
@@ -85,7 +85,7 @@
         </div>
     </div>
     <!-- contact info -->
-    <div class="contact-info">
+    <div id="contact-info">
         <h2>The Tea Cozy </h2>
         <h5>contact@theteacozy.com</h5>
         <h5>917-555-8904</h5>
